# apcore-a2a-python

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/features/: manifest.json
docs/features/01-adapters/: state.json
docs/features/02-storage/: state.json
docs/features/03-server-core/: state.json
docs/features/04-streaming/: state.json
docs/features/05-push-notifications/: state.json
docs/features/06-auth/: state.json
docs/features/07-client/: state.json
docs/features/08-public-api/: state.json
docs/features/09-cli/: state.json
docs/features/10-explorer/: state.json
docs/features/11-ops/: state.json
examples/: README.md  run.py
examples/binding_demo/: run.py
examples/binding_demo/extensions/: convert_temperature.binding.yaml  word_count.binding.yaml
examples/extensions/: greeting.py  math_calc.py  text_echo.py
src/apcore_a2a/: __init__.py  __main__.py  _config.py  _serve.py
src/apcore_a2a/adapters/: __init__.py  agent_card.py  errors.py  parts.py  schema.py  skill_mapper.py
src/apcore_a2a/auth/: __init__.py  jwt.py  middleware.py  protocol.py
src/apcore_a2a/client/: __init__.py  card_fetcher.py  client.py  exceptions.py
src/apcore_a2a/explorer/: __init__.py  app.py  index.html
src/apcore_a2a/server/: __init__.py  executor.py  factory.py
src/apcore_a2a/storage/: __init__.py
tests/: conftest.py  test_cli.py  test_coverage_boost.py  test_public_api.py
tests/adapters/: test_agent_card_builder.py  test_error_mapper.py  test_part_converter.py  test_schema_converter.py  test_skill_mapper.py
tests/auth/: test_auth_middleware.py  test_jwt_authenticator.py
tests/client/: test_a2a_client.py  test_agent_card_fetcher.py
tests/conformance/: _server.py  _spec.py  test_agent_card.py  test_error_mapping.py  test_jwt_claim_coercion.py  test_part_conversion.py  test_skill_resolution.py  test_streaming_events.py
tests/explorer/: test_explorer.py  test_explorer_examples.py
tests/server/: test_executor.py  test_ops.py  test_server_factory.py
